Refactor complex references into read-only properties.